2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor.Gui/DocumentTagTable.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Changed to Property Editable to
	  false in DocumentEditor, maybe add it directly to constructor.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added initial
	  implementation of the serialize methods and added 3 more helper
	  methods to deserialize attributes.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Deleted extra Editable
	  properties that are not needed.

2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/MonoDocument.cs: Deleted Convert methods this
	  new is done in Deserializer.
	* Monodoc.Editor.Utils/EcmaReader.cs: Deleted Accesor.
	* Monodoc.Editor/EditorWindow.cs: Now using MonoDocument and
	  DocumentBufferArchiver when opening a file.

2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/Test/TestMonoDocument.cs: Added to basic
	  constructor tests for MonoDocument.
	* Monodoc.Editor.Utils/MonoDocument.cs: Minor change.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Deleting unused
	  variables.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs,
	  Monodoc.Editor.Gui/DocumentTagTable.cs: More Deserializer
	  implementation work.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Testing Deserialize method.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added
	  DocumentBufferArchiver that handles the deserialization of an XM
	  string stream to a TextBuffer.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Typo.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/Test/Examples/WrapMode.xml,